# javy-demo

./: .gitignore  Cargo.toml  Makefile  clippy.toml  javy-demo.wasm  javy-demo.wizer.wasm  javy-module.min.wasm  javy-module.opt.wasm  javy-module.wasm  js.opt.wasm  js.wizer.wasm  request.json  rust-toolchain  rust-toolchain.toml  wasi-demo-app.wasm
.cargo/: config.toml
crates/js-demo/src/: bindings.rs
crates/wasi-worker/: Cargo.toml
crates/wasi-worker/src/: main.rs
js-demo/: Cargo.toml
js-demo/src/: main.rs
js-demo/src/script/: internals.js
shims/: index.js
src/: bindings.rs  errors.rs  handler.js  handler.mjs  io.rs  jsbindings.rs  main.rs  runtime.mjs  runtime.rs  stdio.rs
src/modules/: javascript.rs  mod.rs
wasi-worker/: Cargo.toml
