[package]
edition = "2021"
name = "javy-demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async-std = { version = "1.12.0", features = ["attributes"] }
wasmparser = "0.206"
#tokio = {version = "^1.33.0", features = ["full"]}
#wasmtime = { version = "19", features = ["async","component-model"] }
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.37", features = ["rt", "rt-multi-thread", "macros"]}
wasi-common = {version = "20"}
wasmtime = {version = "20"}
wasmtime-wasi = {version = "20"}

[profile.release]
codegen-units = 1 
lto = true #Link time opt链接过程优化，size减少大概50%
opt-level = 'z' 
overflow-checks = true #运行期 溢出类型检查
panic = "abort" 
strip = "debuginfo" #  -C strip flag 去除不必要的标头和调试信息，size减少大概30%
