[package]
name = "javy-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[package.metadata.component]
#package = "workoss:javy-demo"

[dependencies]
bitflags = "2.6"
wit-bindgen-rt = "0.34"
#javy = { version = "2.2", features = ["json"] }
javy = { version = "3", features = ["json"] }
regex = "1.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

#[profile.dev]
#debug = false

[profile.release]
codegen-units = 1
lto = true #Link time opt链接过程优化，size减少大概50%
opt-level = 'z'
overflow-checks = true #运行期 溢出类型检查
panic = "abort"
strip = "debuginfo" #  -C strip flag 去除不必要的标头和调试信息，size减少大概30%

