[package]
edition = "2021"
name = "javy-demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
fontdue = "0.9"
mini-moka = "0.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.41", features = ["rt", "rt-multi-thread", "macros"]}
#ureq = { version = "3.0.0-rc1" }
wamr-rust-sdk = {git = "https://github.com/bytecodealliance/wamr-rust-sdk",tag = "v1.1.0"}
#native-tls = "0.2.12"

[profile.release]
codegen-units = 1 
lto = true #Link time opt链接过程优化，size减少大概50%
opt-level = 'z' 
overflow-checks = true #运行期 溢出类型检查
panic = "abort" 
strip = "debuginfo" #  -C strip flag 去除不必要的标头和调试信息，size减少大概30%
